--- a/path.properties
+++ b/path.properties
@@ -1,7 +1,238 @@
-project_path=D:\java\program\ErpToOracle-barch\ebsdi\maven.1365576355028
+project_path=D:\java\program\ErpToOracle-testBarch
 
-#workflow_path=D:\java\program\ErpToOracle-barch\ebsdi\maven.1365576355028\ebsdi-apps\src\main\resources\main\product\erp\egoBrandErp
-#target_path=D:\京东\ERP融合数据集成项目\上线\INT-055-egoBrandErp-W\
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\ql3pl\apSupplierAddressQl3pl
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSupplierAddressQl3pl-W-0.4.004-18457\
 
-workflow_path=D:\java\program\ErpToOracle-barch\ebsdi\maven.1365576355028\ebsdi-apps\src\main\resources\main\product\erp\mtlItemsPriceErp
-target_path=D:\京东\ERP融合数据集成项目\上线\INT-055-mtlItemsPriceErp-W\
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi\ebsdi-apps\src\main\resources\main\vendor\ql3pl\apSuppliersQl3pl
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSuppliersQl3pl-W-0.4.003-18079\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\ql3pl\egoAttrsSupQl3pl
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupQl3pl-W-0.4.006-18360\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi\ebsdi-apps\src\main\resources\main\vendor\ql3pl\hzContactQl3pl
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactQl3pl-W-0.4.003-18085\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi\ebsdi-apps\src\main\resources\main\vendor\ql3pl\hzOuRelQl3pl
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzOuRelQl3pl-W-0.4.005-18087\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi\ebsdi-apps\src\main\resources\main\vendor\ql3pl\ibyExtBankacctQl3pl
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-ibyExtBankacctQl3pl-W-0.4.004-18089\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi\ebsdi-apps\src\main\resources\main\vendor\ql3pl\ibyExtPartyPmtMthdsQl3pl
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-ibyExtPartyPmtMthdsQl3pl-W-0.4.005-18091\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi\ebsdi-apps\src\main\resources\main\vendor\ql3pl\zxRegistrationsQl3pl
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-zxRegistrationsQl3pl-W-0.4.005-17922\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\bjk\ibyExtPartyPmtMthdsBJK
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-ibyExtPartyPmtMthdsBJK-W-0.4.005-17993\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\pop\brandRelationsPop
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-057-brandRelationsPop-W-0.4.009-18164\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\pop\ibyExtPartyPmtMthdsPop
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-ibyExtPartyPmtMthdsPop-W-0.4.007-18164\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\apSupplierAddressVms
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSupplierAddressVms-W-0.4.011-18340\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\bjk\hzContactBJK
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactBJK-W-0.4.006-18164\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\btc\hzContactBtc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactBTC-W-0.4.004-18164\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\ql3pl\hzContactQl3pl
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactQl3pl-W-0.4.004-18164\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\qlDhc\hzContactQlDhc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactQlDhc-W-0.4.003-18164\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\stc\hzContactStc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactSTC-W-0.4.004-18164\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\hzContactVms
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactVms-W-0.4.011-18328\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\brandRelationsVms
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-057-brandRelationsVms-W-0.4.008-\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\stc\hzContactStc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactSTC-W-0.4.005-18239\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\qlDhc\hzContactQlDhc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactQlDhc-W-0.4.004-18239\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\stc\hzContactStc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactSTC-W-0.4.006-18242\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\apSupplierAddressVms
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSupplierAddressVms-W-0.4.010-18248\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\apSuppliersVms
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSuppliersVms-W-0.4.008-18299\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\apSuppRatingVms
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-057-apSuppRatingVms-W-0.4.009-18341\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\brandRelationsVms
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-057-brandRelationsVms-W-0.4.009-18299\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\egoAttrsSupVms\addressBook
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupVms_addressBook-W-0.4.007-18299\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\egoAttrsSupVms\financial
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupVms_financial-W-0.4.007-18299\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\egoAttrsSupVms\vendors
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupVms_vendors-W-0.4.007-18299\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\egoAttrsSupVms\vendorsMargins
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupVms_margins-W-0.4.007-18299\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\ibyExtBankacctVms
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-ibyExtBankacctVms-W-0.4.008-18330\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\ibyExtPartyPmtMthdsVms
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-ibyExtPartyPmtMthdsVms-W-0.4.007-18299\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\purchaserRelationsVms
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-057-purchaserRelationsVms-W-0.4.007-18299\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\vms\zxRegistrationsVms
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-zxRegistrationsVms-W-0.4.008-18330\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\product\ebook\mtlSystemItemsEbook_C
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-050-mtlSystemItemsEbook_C-W-0.4.003-18468\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\product\pop\mtlSystemItemsPop_C
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-050-mtlSystemItemsPop_C-W-0.4.003-18417\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\product\erp\mtlSystemItemsErp_C
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-050-mtlSystemItemsErp_C-W-0.4.002-18355\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\product\pop\mtlSystemItemsPop_U
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-050-mtlSystemItemsPop_U-W-0.4.006-18424\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\product\ebook\mtlSystemItemsEbook_U
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-050-mtlSystemItemsEbook_U-W-0.4.004-18393\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\product\erp\mtlSystemItemsErp_U
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-050-mtlSystemItemsErp_U-W-0.4.004-18393\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\product\erp\egoAttrsErp\ware
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-054-egoAttrsErp_ware-W-0.4.010-18937\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\product\pop\egoMtlSyItemsExt\JD_SP_CGSX
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-054-egoMtlSyItemsExtPopCGSX-W-0.4.004-18530\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\bjk\apSuppliersBJK
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSuppliersBJK-W-0.4.007-18691\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\cps\egoAttrsSupCps\unionBankInfo
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupCpsUnionBankInfo-W-0.4.005-18767\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\cps\egoAttrsSupCps\unionUser
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupCpsUnionUser-W-0.4.004-18754\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\cps\ibyExtPartyPmtMthds
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-ibyExtPartyPmtMthdsCps-W-0.4.005-18742\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\pop\purchaserRelationsPop
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-057-purchaserRelationsPop-W-0.4.012-18752\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\cps\hzContact
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactCps-W-0.4.009-19333\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\qlDhc\apSupplierAddressQlDhc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSupplierAddressQlDhc-W-0.4.007-18790\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\pop\zxRegistrationsPop
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-zxRegistrationsPop-W-0.4.008-19051\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\erpAd\hzOuRelErpAd
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzOuRelErpAd-W-0.4.002-20106\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\cps\apSupplierAddressCps
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSupplierAddressCps-W-0.4.009-19203\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\pop\zxRegistrationsPop
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-zxRegistrationsPop-W-0.4.010-19148\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\erpAd\ibyExtBankacctErpAd
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-ibyExtBankacctErpAd-W-0.4.002-19211\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\erpAd\hzContactErpAd
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzContactErpAd-W-0.4.003-19222\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\egoAttrsSupAdKc\vender_company
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupAdkc_venderCompany-W-0.4.006-19460\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\erpAd\zxRegistrationsErpAd
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-zxRegistrationsErpAd-W-0.4.004-19256\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\btc\egoAttrsSupBtc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupBTC-W-0.4.009-19400\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\stc\egoAttrsSupStc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupSTC-W-0.4.009-19400\
+
+workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\hzOuRelAdKc
+target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-hzOuRelAdKc-W-0.4.007-20106\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\pop\egoAttrsSupPop\vender_company
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupPop_venderCompany-W-0.4.012-18796\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\apSuppliersAdKc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSuppliersAdKc-W-0.4.012-19460\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\egoAttrsSupAdKc\vender_shop
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupAdKc_venderShop-W-0.4.001-19460\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\qlBz\apSupplierAddressQlBz
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSupplierAddressQlBz-W-0.4.005-19475\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\qlBz\apSuppliersQlBz
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSuppliersQlBz-W-0.4.005-19475\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\qlBz\zxRegistrationsQlBz
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-zxRegistrationsQlBz-W-0.4.005-19475\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\erpAd\apSupplierAddressErpAd
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSupplierAddressErpAd-W-0.4.008-19532\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\apSupplierAddressAdKc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSupplierAddressAdKc-W-0.4.008-19959\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\egoAttrsSupAdKc\vender_company
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupAdkc_venderCompany-W-0.4.010-19746\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\egoAttrsSupAdKc\vender_company_ext
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupAdKc_venderCompanyExt-W-0.4.005-19864\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\egoAttrsSupAdKc\vender_return_address
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupAdKc_venderReturnAddress-W-0.4.006-19760\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\egoAttrsSupAdKc\vender_shop
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupAdKc_venderShop-W-0.4.006-19851\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\erpAd\apSupplierErpAd
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-apSuppliersErpAd-W-0.4.003-19102\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\erpAd\ibyExtBankacctErpAd
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-ibyExtBankacctErpAd-W-0.4.004-19235\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\egoAttrsSupAdKc\vender_take_address
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupAdKc_venderTakeAddress-W-0.4.007-19970\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\egoAttrsSupAdKc\vender_vender
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-058-egoAttrsSupAdKc_venderVender-W-0.4.004-19851\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\zxRegistrationsAdKc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-zxRegistrationsAdKc-W-0.4.007-19950\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\ibyExtPartyPmtMthdsAdKc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-056-ibyExtPartyPmtMthdsAdKc-W-0.4.007-19970\
+
+#workflow_path=D:\java\program\ErpToOracle-testBarch\ebsdi-apps\src\main\resources\main\vendor\adKc\brandRelationsAdKc
+#target_path=D:\京东\ERP融合数据集成项目\上线\INT-057-brandRelationsAdKc-W-0.4.006-19970\
